--- a/etc/config.h.in
+++ b/etc/config.h.in
@@ -1,5 +1,8 @@
 /* etc/config.h.in.  Generated from configure.in by autoheader.  */
 
+/* Whether building using Cygwin on Windoze */
+#undef CYGWIN
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
